<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_10_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_15_char"
            app:layout_flexBasisPercent="50%"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_20_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_25_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_30_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_40_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_50_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_60_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_70_char"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            app:layout_flexBasisPercent="50%"
            android:text="@string/test_text_short"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/tag_text_view_style"
            android:text="@string/test_text_long"/>

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>